--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/slider.css">
+  <link rel="stylesheet" href="/css/toggle.css">
 </head>
 <body>
 
@@ -24,18 +26,22 @@
 
   <main class="pricing">
     <div class="flex-between">
-      <p>Pageviews</p>
-      <p>$ /month</p>
+      <p id="pageviews">100k Pageviews</p>
+      <p class="price-month"><span class="price">$16.00</span>/month</p>
     </div>
-    <div class="slider">
-
-    </div>
+    <input type="range" class="price-slider" min=1 max=5>
     
-    <div class="toggle-yearly">
+    <div class="toggle-billing">
       Monthly Billing
+      <label class="toggle">
+        <input type="checkbox">
+        <span class="toggle-slider"></span>
+      </label>
     Yearly Billing 25% discount
     </div>
     
+    <hr>
+
     <div class="flex-between">
       Unlimited websites
       100% data ownership
@@ -50,5 +56,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Srikant Nimmagadda</a>.
   </div>
+
+  <script src="src/main.js"></script>
 </body>
 </html>
