Finish css for billing toggle, discount and hr

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <input type="checkbox">
         <span class="toggle-slider"></span>
       </label>
-    Yearly Billing 25% discount
+    Yearly Billing
+    <span class="discount">25% discount</span>
     </div>
     
     <hr>
