--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Srikant Nimmagadda</a>.
+    Coded by <a href="https://github.com/srikant-n">Srikant Nimmagadda</a>.
   </footer>
 
   <script src="src/main.js"></script>
