Fix css and js source paths

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   
   <title>Frontend Mentor | Interactive pricing component</title>
   
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/slider.css">
-  <link rel="stylesheet" href="/css/toggle.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/slider.css">
+  <link rel="stylesheet" href="./css/toggle.css">
 </head>
 <body>
 
@@ -55,6 +55,6 @@
     Coded by <a href="https://github.com/srikant-n">Srikant Nimmagadda</a>.
   </footer>
 
-  <script src="src/main.js"></script>
+  <script src="./src/main.js"></script>
 </body>
 </html>
