Change flex layout so that it can also be used for mobile layout

--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
   </footer>
 
   <main class="pricing">
-    <div class="flex-between">
-      <p id="pageviews">100k Pageviews</p>
-      <p class="price-month"><span class="price">$16.00</span>/month</p>
-    </div>
+    <p id="pageviews">100k Pageviews</p>
+    <p id="price-month"><span class="price">$16.00</span><span>/month</span></p>
+
     <input type="range" class="price-slider" min=1 max=5>
 
     <div class="toggle-billing">
@@ -45,16 +44,15 @@
 
     <hr>
 
-    <div id="list-and-button" class="flex-between">
-      <ul>
-        <li>Unlimited websites</li>
-        <li>100% data ownership</li>
-        <li>Email reports</li>
-      </ul>
+    <ul id="info-list">
+      <li>Unlimited websites</li>
+      <li>100% data ownership</li>
+      <li>Email reports</li>
+    </ul>
 
+    <div id="start-trial-holder">
       <button id="start-trial" value="start">Start my trial</button>
     </div>
-
   </main>
 
   <script src="./src/main.js"></script>
