Change header-info to block for portrait

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <header>
     <h1>Simple, traffic-based pricing</h1>
-    <p class="medium-text">Sign-up for our 30-day trial. No credit card required.</p>
+    <p class="medium-text"><span class="header-info">Sign-up for our 30-day trial. </span><span class="header-info">No credit card required.</span></p>
   </header>
 
   <footer class="attribution">
